<resources>
    <string name="app_name">PelisAppCine</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="settings">Settings</string>
    <string name="settings_mode">Modo</string>
    <string name="settings_change_mode">Cambio de modo</string>
    <string name="settings_change_dialog_mode">Cambio de modo</string>
    <string name="settings_language">Idioma</string>
    <string name="settings_change_language">Cambio de idioma</string>
    <string name="settings_change_dialog_language">Cambio de idioma</string>
    <string name="settings_username">Nombre de usuario</string>
    <string name="settings_notifications">Notificaciones</string>

    <string name="insertUser">Usuario</string>
    <string name="insertPassword">Contraseña</string>
    <string name="insertEmail">Email</string>

    <string name="inicio">Inicio</string>
    <string name="perfil">Perfil</string>
    <string name="registro_usuario">Registro</string>
    <string name="modificacion_perfil">Modificacion de Perfil</string>
    <string name="listado_peliculas">Peliculas</string>
    <string name="listado_peliculas_favoritas">Favoritas</string>
    <string name="configuration">Configuracion</string>


    <string name="pelicula">Pelicula</string>
    <string name="details">Detalles</string>


    <string name="registerUser">Usuario</string>
    <string name="registerPassword">Contraseña</string>
    <string name="registerEmail">Email</string>

    <string name="editUser">Usuario</string>
    <string name="editPassword">Contraseña</string>
    <string name="editEmail">Email</string>

    <string name="addFavorites">Añadir a Favoritos</string>
    <string name="removeFavorites">Eliminar de Favoritos</string>

    <string name="film_title">Titulo</string>
    <string name="film_release_date">Fecha de estreno</string>
    <string name="film_original_title">Titulo original</string>
    <string name="film_description">Descripcion</string>
    <string name="film_popularity">Popularidad</string>
    <string name="film_vote_average">Promedio de votos</string>
    <string name="film_vote_count">Conteo de votos</string>

    <string name="incorrect_credentials">Credenciales incorrectas</string>
</resources>